After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786007 - flickr: Doesn't show the permissions page after logging in
flickr: Doesn't show the permissions page after logging in
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-08-08 16:00 UTC by Debarshi Ray
Modified: 2017-08-08 16:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flickr: Make it show the permissions page after login (1.59 KB, patch)
2017-08-08 16:05 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-08-08 16:00:27 UTC
For the past few weeks, the embedded web view merely shows my Flickr home page after logging in. It is supposed to show me permissions page to allow or deny GNOME access to my account.

I don't know what caused this breakage.
Comment 1 Debarshi Ray 2017-08-08 16:05:24 UTC
Created attachment 357210 [details] [review]
flickr: Make it show the permissions page after login
Comment 2 Debarshi Ray 2017-08-08 16:22:09 UTC
Comment on attachment 357210 [details] [review]
flickr: Make it show the permissions page after login

Pushed to master, gnome-3-24 and gnome-3-22.