flickr: Make it show the permissions page after login

... instead of the user's Flickr home page.

Changing the OAuth endpoints to the documented www.flickr.com, instead
of m.flickr.com, fixes the problem. Both present the same compact UI,
so there is no need to explicitly ask for the mobile version of it.

This reverts commit 219b3d72ca3e05cbb35417619637f0ff1512a9fa

https://bugzilla.gnome.org/show_bug.cgi?id=786007